--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -11,7 +11,70 @@ on:
       - main
 
 jobs:
-  build-and-test:
+  build:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/pypoetry
+            ~/.cache/pip
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-
+
+      - name: Install Poetry
+        uses: abatilo/actions-poetry@v2.0.0
+        with:
+          poetry-version: "1.8.3"
+
+      - name: Update package index and install dependencies
+        run: |
+          poetry install --with dev 
+          poetry install -E google -E watson -E polly -E microsoft -E googletrans -E witai -E elevenlabs
+          poetry run postinstall
+
+      - name: Generate setup.py on Windows
+        if: matrix.os == 'windows-latest'
+        run: |
+          $PACKAGE_VERSION = (poetry version --short).Trim()
+          Add-Content setup.py "from setuptools import setup, find_packages"
+          Add-Content setup.py "import os"
+          Add-Content setup.py "version = os.getenv('PACKAGE_VERSION', '$PACKAGE_VERSION')"
+          Add-Content setup.py "setup("
+          Add-Content setup.py "    name='py3-tts-wrapper',"
+          Add-Content setup.py "    version=version,"
+          Add-Content setup.py "    packages=find_packages(),"
+          Add-Content setup.py "    install_requires=["
+          poetry export -f requirements.txt --without-hashes --all-extras | ForEach-Object { $_ -replace '"', '\"' } | ForEach-Object { Add-Content setup.py ("        `"$_`",") }
+          Add-Content setup.py "    ],"
+          Add-Content setup.py "    # Add any additional options necessary for building platform-specific wheels"
+          Add-Content setup.py ")"
+        env:
+          PACKAGE_VERSION: ${{ steps.set_version.outputs.version }}
+
+      - name: Build the wheel
+        run: |
+          pip install wheel setuptools
+          python setup.py bdist_wheel
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist
+
+  # Test both wheel and from poetry - on a range of platforms and versions
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -123,130 +186,38 @@ jobs:
           GOOGLE_SA_FILE_B64: ${{ secrets.GOOGLE_SA_FILE_B64 }}
         run: poetry run make tests
 
-      - name: Generate setup.py on Windows
+      - name: Download build artifacts 
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist
+
+      - name: Install wheel package on Windows
         if: matrix.os == 'windows-latest'
         run: |
-          $PACKAGE_VERSION = (poetry version --short).Trim()
-          Add-Content setup.py "from setuptools import setup, find_packages"
-          Add-Content setup.py "import os"
-          Add-Content setup.py "version = os.getenv('PACKAGE_VERSION', '$PACKAGE_VERSION')"
-          Add-Content setup.py "setup("
-          Add-Content setup.py "    name='py3-tts-wrapper',"
-          Add-Content setup.py "    version=version,"
-          Add-Content setup.py "    packages=find_packages(),"
-          Add-Content setup.py "    install_requires=["
-          poetry export -f requirements.txt --without-hashes --all-extras | ForEach-Object { $_ -replace '"', '\"' } | ForEach-Object { Add-Content setup.py ("        `"$_`",") }
-          Add-Content setup.py "    ],"
-          Add-Content setup.py "    # Add any additional options necessary for building platform-specific wheels"
-          Add-Content setup.py ")"
-        env:
-          PACKAGE_VERSION: ${{ steps.set_version.outputs.version }}
+          $wheel = Get-ChildItem -Path dist\*.whl | Select-Object -First 1
+          Write-Output "Installing $($wheel.Name)"
+          pip install $wheel.FullName
 
-      - name: Generate setup.py on Unix-based systems
-        if: matrix.os != 'windows-latest'
-        run: |
-          PACKAGE_VERSION=$(poetry version --short)
-          echo "from setuptools import setup, find_packages" > setup.py
-          echo "import os" >> setup.py
-          echo "version = os.getenv('PACKAGE_VERSION', '$PACKAGE_VERSION')" >> setup.py
-          echo "setup(" >> setup.py
-          echo "    name='py3-tts-wrapper'," >> setup.py
-          echo "    version=version," >> setup.py
-          echo "    packages=find_packages()," >> setup.py
-          echo "    install_requires=[" >> setup.py
-          poetry export -f requirements.txt --without-hashes --all-extras | sed 's/"/\\"/g' | sed 's/^/        "/' | sed 's/$/",/' >> setup.py
-          echo "    ]," >> setup.py
-          echo "    # Add any additional options necessary for building platform-specific wheels" >> setup.py
-          echo ")" >> setup.py
-        env:
-          PACKAGE_VERSION: ${{ steps.set_version.outputs.version }}
+      - name: Basic tests with pytest
+        if: matrix.os == 'windows-latest'
+        run: make tests
 
-      - name: Build the wheel
-        run: |
-          pip install wheel setuptools
-          python setup.py bdist_wheel
-          mkdir -p dist/${{ matrix.os }}-${{ matrix.python-version }}
-          mv dist/*.whl dist/${{ matrix.os }}-${{ matrix.python-version }}/
+        - name: Upload Coverage to Codecov
+        if: ${{ !env.ACT }} && github.event_name == 'push'
+        uses: codecov/codecov-action@v2
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist-${{ matrix.os }}-${{ matrix.python-version }}
-          path: dist/${{ matrix.os }}-${{ matrix.python-version }}
 
   publish:
     runs-on: ubuntu-latest
     needs: build-and-test
     # if: startsWith(github.ref, 'refs/tags/')
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: Create dist directory
-        run: mkdir -p dist
-
-      - name: Install Poetry
-        uses: abatilo/actions-poetry@v2.0.0
-        with:
-          poetry-version: "1.8.3"
-
-      - name: Download build artifacts for macOS 3.10
+      - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: dist-macos-latest-3.10
-          path: dist
-
-      - name: Download build artifacts for macOS 3.11
-        uses: actions/download-artifact@v4
-        with:
-          name: dist-macos-latest-3.11
-          path: dist
-
-      - name: Download build artifacts for macOS 3.12
-        uses: actions/download-artifact@v4
-        with:
-          name: dist-macos-latest-3.12
-          path: dist
-
-      - name: Download build artifacts for Ubuntu 3.10
-        uses: actions/download-artifact@v4
-        with:
-          name: dist-ubuntu-latest-3.10
-          path: dist
-
-      - name: Download build artifacts for Ubuntu 3.11
-        uses: actions/download-artifact@v4
-        with:
-          name: dist-ubuntu-latest-3.11
-          path: dist
-
-      - name: Download build artifacts for Ubuntu 3.12
-        uses: actions/download-artifact@v4
-        with:
-          name: dist-ubuntu-latest-3.12
-          path: dist
-
-      - name: Download build artifacts for Windows 3.10
-        uses: actions/download-artifact@v4
-        with:
-          name: dist-windows-latest-3.10
-          path: dist
-
-      - name: Download build artifacts for Windows 3.11
-        uses: actions/download-artifact@v4
-        with:
-          name: dist-windows-latest-3.11
-          path: dist
-
-      - name: Download build artifacts for Windows 3.12
-        uses: actions/download-artifact@v4
-        with:
-          name: dist-windows-latest-3.12
+          name: dist
           path: dist
 
       - name: List contents of dist after download
