--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -210,7 +210,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: test
     # if: startsWith(github.ref, 'refs/tags/')
     steps:
 
