--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -259,7 +259,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: test
-    # if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
 
       - name: Download build artifacts
