--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Generate setup.py on Windows
         run: |
-          $PACKAGE_VERSION = (poetry version --short).Trim()
+          $PACKAGE_VERSION = "${{ steps.set_version.outputs.version }}"
           $README_CONTENT = Get-Content README.md -Raw
           Add-Content setup.py "from setuptools import setup, find_packages"
           Add-Content setup.py "import os"
@@ -259,7 +259,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: test
-    if: startsWith(github.ref, 'refs/tags/')
+    # if: startsWith(github.ref, 'refs/tags/')
     steps:
 
       - name: Download build artifacts
