--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,12 @@
-#NB: PLEASE DONT USE THIS. USE POETRY. WE WILL KEEP THIS UPDATED ONLY FOR DOWNSTREAM PROJECTS WHO NEED TO KNOW
-attrs==23.2.0 ; python_version >= "3.10" and python_version < "3.13"
-audioread==3.0.1 ; python_version >= "3.10" and python_version < "3.13"
 azure-cognitiveservices-speech==1.38.0 ; python_version >= "3.10" and python_version < "3.13"
-babel==2.15.0 ; python_version >= "3.10" and python_version < "3.13"
-bibtexparser==2.0.0b7 ; python_version >= "3.10" and python_version < "3.13"
-boto3==1.34.149 ; python_version >= "3.10" and python_version < "3.13"
-botocore==1.34.149 ; python_version >= "3.10" and python_version < "3.13"
+boto3==1.34.151 ; python_version >= "3.10" and python_version < "3.13"
+botocore==1.34.151 ; python_version >= "3.10" and python_version < "3.13"
 cachetools==5.4.0 ; python_version >= "3.10" and python_version < "3.13"
 certifi==2024.7.4 ; python_version >= "3.10" and python_version < "3.13"
-cffi==1.16.0 ; python_version >= "3.10" and python_version < "3.13"
 charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "3.13"
 click==8.1.7 ; python_version >= "3.10" and python_version < "3.13"
-clldutils==3.22.2 ; python_version >= "3.10" and python_version < "3.13"
-colorama==0.4.6 ; python_version >= "3.10" and python_version < "3.13"
-coloredlogs==15.0.1 ; python_version >= "3.10" and python_version < "3.13"
-colorlog==6.8.2 ; python_version >= "3.10" and python_version < "3.13"
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "3.13" and platform_system == "Windows"
 comtypes==1.4.5 ; python_version >= "3.10" and python_version < "3.13" and platform_system == "Windows"
-csvw==3.3.0 ; python_version >= "3.10" and python_version < "3.13"
-cython==0.29.30 ; python_version >= "3.10" and python_version < "3.13"
-decorator==5.1.1 ; python_version >= "3.10" and python_version < "3.13"
-dlinfo==1.2.1 ; python_version >= "3.10" and python_version < "3.13"
-filelock==3.15.4 ; python_version >= "3.10" and python_version < "3.13"
-flatbuffers==24.3.25 ; python_version >= "3.10" and python_version < "3.13"
-fsspec==2024.6.1 ; python_version >= "3.10" and python_version < "3.13"
 google-api-core[grpc]==2.19.1 ; python_version >= "3.10" and python_version < "3.13"
 google-auth==2.32.0 ; python_version >= "3.10" and python_version < "3.13"
 google-cloud-texttospeech==2.16.4 ; python_version >= "3.10" and python_version < "3.13"
@@ -30,59 +14,19 @@ googleapis-common-protos==1.63.2 ; python_version >= "3.10" and python_version <
 grpcio-status==1.65.1 ; python_version >= "3.10" and python_version < "3.13"
 grpcio==1.65.1 ; python_version >= "3.10" and python_version < "3.13"
 gtts==2.5.2 ; python_version >= "3.10" and python_version < "3.13"
-humanfriendly==10.0 ; python_version >= "3.10" and python_version < "3.13"
-ibm-cloud-sdk-core==3.20.3 ; python_version >= "3.10" and python_version < "3.13"
+ibm-cloud-sdk-core==3.20.4 ; python_version >= "3.10" and python_version < "3.13"
 ibm-watson==8.1.0 ; python_version >= "3.10" and python_version < "3.13"
 idna==3.7 ; python_version >= "3.10" and python_version < "3.13"
-isodate==0.6.1 ; python_version >= "3.10" and python_version < "3.13"
-jinja2==3.1.4 ; python_version >= "3.10" and python_version < "3.13"
 jmespath==1.0.1 ; python_version >= "3.10" and python_version < "3.13"
-joblib==1.4.2 ; python_version >= "3.10" and python_version < "3.13"
-jsonschema-specifications==2023.12.1 ; python_version >= "3.10" and python_version < "3.13"
-jsonschema==4.23.0 ; python_version >= "3.10" and python_version < "3.13"
-language-tags==1.2.0 ; python_version >= "3.10" and python_version < "3.13"
-lazy-loader==0.4 ; python_version >= "3.10" and python_version < "3.13"
-librosa==0.10.0 ; python_version >= "3.10" and python_version < "3.13"
-llvmlite==0.43.0 ; python_version >= "3.10" and python_version < "3.13"
-lxml==5.2.2 ; python_version >= "3.10" and python_version < "3.13"
-markdown==3.6 ; python_version >= "3.10" and python_version < "3.13"
-markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "3.13"
-monotonic-align==1.0.0 ; python_version >= "3.10" and python_version < "3.13"
-mpmath==1.3.0 ; python_version >= "3.10" and python_version < "3.13"
-msgpack==1.0.8 ; python_version >= "3.10" and python_version < "3.13"
-networkx==3.3 ; python_version >= "3.10" and python_version < "3.13"
-numba==0.60.0 ; python_version >= "3.10" and python_version < "3.13"
-numpy==1.24.3 ; python_version >= "3.10" and python_version < "3.13"
-nvidia-cublas-cu12==12.1.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
-nvidia-cuda-cupti-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
-nvidia-cuda-nvrtc-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
-nvidia-cuda-runtime-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
-nvidia-cudnn-cu12==9.1.0.70 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
-nvidia-cufft-cu12==11.0.2.54 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
-nvidia-curand-cu12==10.3.2.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
-nvidia-cusolver-cu12==11.4.5.107 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
-nvidia-cusparse-cu12==12.1.0.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
-nvidia-nccl-cu12==2.20.5 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
-nvidia-nvjitlink-cu12==12.5.82 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
-nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
-onnxruntime==1.18.1 ; python_version >= "3.10" and python_version < "3.13"
-packaging==24.1 ; python_version >= "3.10" and python_version < "3.13"
-phonemizer==3.2.1 ; python_version >= "3.10" and python_version < "3.13"
-piper-phonemize==1.1.0 ; python_version >= "3.10" and python_version < "3.13"
-piper-tts==1.2.0 ; python_version >= "3.10" and python_version < "3.13"
-platformdirs==4.2.2 ; python_version >= "3.10" and python_version < "3.13"
-pooch==1.8.2 ; python_version >= "3.10" and python_version < "3.13"
+numpy==2.0.1 ; python_version >= "3.10" and python_version < "3.13"
 proto-plus==1.24.0 ; python_version >= "3.10" and python_version < "3.13"
 protobuf==5.27.2 ; python_version >= "3.10" and python_version < "3.13"
 py3-tts==3.5 ; python_version >= "3.10" and python_version < "3.13"
-py3-ttsmms==0.8.25 ; python_version >= "3.10" and python_version < "3.13"
 pyasn1-modules==0.4.0 ; python_version >= "3.10" and python_version < "3.13"
 pyasn1==0.6.0 ; python_version >= "3.10" and python_version < "3.13"
 pyaudio==0.2.14 ; python_version >= "3.10" and python_version < "3.13"
-pycparser==2.22 ; python_version >= "3.10" and python_version < "3.13"
 pydub==0.25.1 ; python_version >= "3.10" and python_version < "3.13"
 pyjwt==2.8.0 ; python_version >= "3.10" and python_version < "3.13"
-pylatexenc==2.10 ; python_version >= "3.10" and python_version < "3.13"
 pyobjc-core==9.0.1 ; python_version >= "3.10" and python_version < "3.13" and platform_system == "Darwin"
 pyobjc-framework-accessibility==9.0.1 ; python_version >= "3.10" and python_version < "3.13" and platform_system == "Darwin" and platform_release >= "20.0"
 pyobjc-framework-accounts==9.0.1 ; python_version >= "3.10" and python_version < "3.13" and platform_system == "Darwin" and platform_release >= "12.0"
@@ -231,33 +175,13 @@ pyobjc-framework-virtualization==9.0.1 ; python_version >= "3.10" and python_ver
 pyobjc-framework-vision==9.0.1 ; python_version >= "3.10" and python_version < "3.13" and platform_system == "Darwin" and platform_release >= "17.0"
 pyobjc-framework-webkit==9.0.1 ; python_version >= "3.10" and python_version < "3.13" and platform_system == "Darwin"
 pyobjc==9.0.1 ; python_version >= "3.10" and python_version < "3.13" and platform_system == "Darwin"
-pyparsing==3.1.2 ; python_version >= "3.10" and python_version < "3.13"
 pypiwin32==223 ; python_version >= "3.10" and python_version < "3.13" and platform_system == "Windows"
-pyreadline3==3.4.1 ; sys_platform == "win32" and python_version >= "3.10" and python_version < "3.13"
 python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "3.13"
 pywin32==306 ; python_version >= "3.10" and python_version < "3.13" and platform_system == "Windows"
-rdflib==7.0.0 ; python_version >= "3.10" and python_version < "3.13"
-referencing==0.35.1 ; python_version >= "3.10" and python_version < "3.13"
-regex==2024.7.24 ; python_version >= "3.10" and python_version < "3.13"
 requests==2.32.3 ; python_version >= "3.10" and python_version < "3.13"
-rfc3986==1.5.0 ; python_version >= "3.10" and python_version < "3.13"
-rpds-py==0.19.1 ; python_version >= "3.10" and python_version < "3.13"
 rsa==4.9 ; python_version >= "3.10" and python_version < "3.13"
 s3transfer==0.10.2 ; python_version >= "3.10" and python_version < "3.13"
-scikit-learn==1.5.1 ; python_version >= "3.10" and python_version < "3.13"
-scipy==1.14.0 ; python_version >= "3.10" and python_version < "3.13"
-segments==2.2.1 ; python_version >= "3.10" and python_version < "3.13"
-sherpa-onnx==1.10.18 ; python_version >= "3.10" and python_version < "3.13"
+sherpa-onnx==1.10.20 ; python_version >= "3.10" and python_version < "3.13"
 six==1.16.0 ; python_version >= "3.10" and python_version < "3.13"
-soundfile==0.12.1 ; python_version >= "3.10" and python_version < "3.13"
-soxr==0.4.0 ; python_version >= "3.10" and python_version < "3.13"
-sympy==1.13.1 ; python_version >= "3.10" and python_version < "3.13"
-tabulate==0.9.0 ; python_version >= "3.10" and python_version < "3.13"
-threadpoolctl==3.5.0 ; python_version >= "3.10" and python_version < "3.13"
-torch==2.4.0 ; python_version >= "3.10" and python_version < "3.13"
-triton==3.0.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version < "3.13" and python_version >= "3.10"
-typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "3.13"
-unidecode==1.3.8 ; python_version >= "3.10" and python_version < "3.13"
-uritemplate==4.1.1 ; python_version >= "3.10" and python_version < "3.13"
 urllib3==2.2.2 ; python_version >= "3.10" and python_version < "3.13"
 websocket-client==1.8.0 ; python_version >= "3.10" and python_version < "3.13"
