--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,10 @@ packages = [{include = "tts_wrapper"}]
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 requests = { version = "^2.31.0", optional = true }
-numpy = { version = "^2.0.1",  optional = true }
+numpy = [
+    { version = "1.24.3", python = "~3.10", optional = true },
+    { version = "^2.0.1", python = ">=3.11", optional = true }
+]
 boto3 = {version = "^1.34.137", optional = true}
 ibm-watson = {version = "^8.1.0", optional = true}
 google-cloud-texttospeech = {version = "^2.12.0", optional = true}
@@ -45,6 +48,7 @@ pytest = "^6.2.1"
 pytest-mock = "^3.5.1"
 black = {version = "^22.1.0", allow-prereleases = true}
 types-requests = "^2.27.31"
+types-pyaudio = "^0.2.16"
 mypy = "^0.971"
 types-boto3 = "^1.0.2"
 pytest-cov = "^3.0.0"
