--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -37,89 +37,27 @@ jobs:
         with:
           poetry-version: "1.8.3"
 
+      - name: Install poetry-dynamic-versioning plugin
+        run: poetry self add poetry-dynamic-versioning
+
+      - name: Enable dynamic versioning
+        run: poetry dynamic-versioning
+
       - name: Update package index and install dependencies
         run: |
           poetry install --with dev 
           poetry install -E google -E watson -E polly -E microsoft -E googletrans -E witai -E elevenlabs
           poetry run postinstall
 
-      # - name: Extract version from GitHub ref on *nix
-      #   id: extract_version
-      #   run: |
-      #     REF_NAME=${{ github.ref_name }}
-      #     if [[ $REF_NAME == v* ]]; then
-      #       VERSION=${REF_NAME:1}
-      #     else
-      #       VERSION=$REF_NAME
-      #     fi
-      #     echo "VERSION=$VERSION" >> $GITHUB_ENV
-
-      - name: Extract version from GitHub ref on Windows
-        id: extract_version
-        run: |
-          $refName = "${{ github.ref_name }}"
-          if ($refName.StartsWith("v")) {
-            $version = $refName.Substring(1)
-          } else {
-            $version = $refName
-          }
-          echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Append
-
-      - name: Generate setup.py on Windows
-        run: |
-          $PACKAGE_VERSION = "${{ env.VERSION }}"
-          $README_CONTENT = Get-Content README.md -Raw
-          Add-Content setup.py "from setuptools import setup, find_packages"
-          Add-Content setup.py "import os"
-          Add-Content setup.py "version = os.getenv('PACKAGE_VERSION', '$PACKAGE_VERSION')"
-          Add-Content setup.py "with open('README.md', 'r', encoding='utf-8') as fh:"
-          Add-Content setup.py "    long_description = fh.read()"
-          Add-Content setup.py "setup("
-          Add-Content setup.py "    name='py3-tts-wrapper',"
-          Add-Content setup.py "    version=version,"
-          Add-Content setup.py "    packages=find_packages(),"
-          Add-Content setup.py "    install_requires=["
-          poetry export -f requirements.txt --without-hashes --all-extras | ForEach-Object { $_ -replace '"', '\"' } | ForEach-Object { Add-Content setup.py ("        `"$_`",") }
-          Add-Content setup.py "    ],"
-          Add-Content setup.py "    long_description=long_description,"
-          Add-Content setup.py "    long_description_content_type='text/markdown',"
-          Add-Content setup.py "    # Add any additional options necessary for building platform-specific wheels"
-          Add-Content setup.py ")"
-        env:
-          PACKAGE_VERSION: ${{ env.VERSION }}
-
-
-      # We used to build on all platforms. Just incase we need to do that..
-      # - name: Generate setup.py on Unix-based systems
-      #   if: matrix.os != 'windows-latest'
-      #   run: |
-      #     PACKAGE_VERSION=$(poetry version --short)
-      #     echo "from setuptools import setup, find_packages" > setup.py
-      #     echo "import os" >> setup.py
-      #     echo "version = os.getenv('PACKAGE_VERSION', '$PACKAGE_VERSION')" >> setup.py
-      #     echo "setup(" >> setup.py
-      #     echo "    name='py3-tts-wrapper'," >> setup.py
-      #     echo "    version=version," >> setup.py
-      #     echo "    packages=find_packages()," >> setup.py
-      #     echo "    install_requires=[" >> setup.py
-      #     poetry export -f requirements.txt --without-hashes --all-extras | sed 's/"/\\"/g' | sed 's/^/        "/' | sed 's/$/",/' >> setup.py
-      #     echo "    ]," >> setup.py
-      #     echo "    # Add any additional options necessary for building platform-specific wheels" >> setup.py
-      #     echo ")" >> setup.py
-      #   env:
-      #     PACKAGE_VERSION: ${{ steps.set_version.outputs.version }}
-
-      - name: Build the wheel
-        run: |
-          pip install wheel setuptools
-          python setup.py bdist_wheel
+      - name: Build package
+        run: poetry build
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: dist
           path: dist
-
+        
   # Test both wheel and from poetry - on a range of platforms and versions
   test:
     needs: build
@@ -233,7 +171,7 @@ jobs:
           GOOGLE_SA_PATH: ${{ secrets.GOOGLE_SA_PATH }}
           GOOGLE_SA_FILE_B64: ${{ secrets.GOOGLE_SA_FILE_B64 }}
         run: poetry run make tests
-      
+  
         # Building the wheel is failing. I dont know why
       # - name: Download build artifacts 
       #   uses: actions/download-artifact@v4
@@ -276,7 +214,6 @@ jobs:
       # - name: Upload Coverage to Codecov
       #   if: ${{ !env.ACT }} && github.event_name == 'push'
       #   uses: codecov/codecov-action@v2
-
 
   publish:
     runs-on: ubuntu-latest
