--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,14 +17,14 @@ packages = [{include = "tts_wrapper"}]
 python = ">=3.10,<3.13"
 requests = { version = "^2.31.0", optional = true }
 numpy = [
-    { version = "1.24.3", python = "~3.10", optional = true },
-    { version = "^2.0.1", python = ">=3.11", optional = true }
+    { version = "1.24.3", python = "~3.10", optional = false },
+    { version = "^2.0.1", python = ">=3.11", optional = false }
 ]
+sounddevice = "^0.5.0"
 boto3 = {version = "^1.34.137", optional = true}
 ibm-watson = {version = "^8.1.0", optional = true}
 google-cloud-texttospeech = {version = "^2.12.0", optional = true}
 py3-tts = {version = "^3.5", optional = true}
-pyaudio = {version = "^0.2.11", optional = false}
 azure-cognitiveservices-speech = {version = "^1.15.0",  optional = true}
 winrt-runtime = { version = "^2.0.1", markers = "sys_platform == 'win32'", optional = true }
 sherpa-onnx ={ version = "^1.10.17", optional = true }
@@ -40,7 +40,7 @@ elevenlabs = ["requests","numpy"]
 witai = ["requests"]
 sapi = ["py3-tts"]
 uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","winrt_windows.foundationtime"]
-sherpaonnx = ["sherpa-onnx", "requests"]
+sherpaonnx = ["sherpa-onnx", "requests", "numpy"]
 googletrans = ["gTTS","pydub"]
 
 [tool.poetry.dev-dependencies]
