im just commiting this
- So this works for googleTrans
- Im basically though saying
   - We only deal with wav data with no headers from synth_to_bytes
But this causes real issues down the line. Take elevelabs. We would be ditching the idea of getting mp3 data or other.

I might be ok with that - but I might not - i cant decide. Its a ton of work to strip out the format stuff from each engine though

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ sherpa-onnx ={ version = "^1.10.17", optional = true }
 gTTS={ version = "^2.5.2", optional = true }
 pydub={ version = "^0.25.1", optional = true }
 
+soundfile = "^0.12.1"
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
 watson = ["ibm-watson", "websocket", "requests"]
