--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ numpy = [
     { version = "^2.0.1", python = ">=3.11", optional = false }
 ]
 sounddevice = "^0.5.0"
+soundfile = "^0.12.1"
+pydub="^0.25.1"
+
 boto3 = {version = "^1.34.137", optional = true}
 ibm-watson = {version = "^8.1.0", optional = true}
 google-cloud-texttospeech = {version = "^2.12.0", optional = true}
@@ -29,9 +32,7 @@ azure-cognitiveservices-speech = {version = "^1.15.0",  optional = true}
 winrt-runtime = { version = "^2.0.1", markers = "sys_platform == 'win32'", optional = true }
 sherpa-onnx ={ version = "^1.10.17", optional = true }
 gTTS={ version = "^2.5.2", optional = true }
-pydub={ version = "^0.25.1", optional = true }
 
-soundfile = "^0.12.1"
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
 watson = ["ibm-watson", "websocket", "requests"]
