--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,6 @@ numpy = [
 ]
 sounddevice = "^0.5.0"
 soundfile = "^0.12.1"
-pydub="^0.25.1"
 
 boto3 = {version = "^1.34.137", optional = true}
 ibm-watson = {version = "^8.1.0", optional = true}
@@ -33,6 +32,7 @@ winrt-runtime = { version = "^2.0.1", markers = "sys_platform == 'win32'", optio
 sherpa-onnx ={ version = "^1.10.17", optional = true }
 gTTS={ version = "^2.5.2", optional = true }
 
+pymp3 = "^0.2.0"
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
 watson = ["ibm-watson", "websocket", "requests"]
@@ -50,7 +50,6 @@ pytest = "^6.2.1"
 pytest-mock = "^3.5.1"
 black = {version = "^22.1.0", allow-prereleases = true}
 types-requests = "^2.27.31"
-types-pyaudio = "^0.2.16"
 mypy = "^0.971"
 types-boto3 = "^1.0.2"
 pytest-cov = "^3.0.0"
