--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ witai = ["requests"]
 sapi = ["py3-tts"]
 uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","winrt_windows.foundationtime"]
 sherpaonnx = ["sherpa-onnx", "requests", "numpy"]
-googletrans = ["gTTS","pydub"]
+googletrans = ["gTTS"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
