--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "py3-tts-wrapper"
-version = "0.9.7"
+version = "0.9.9.post18.dev0+6a6f905"
 description = "TTS-Wrapper makes it easier to use text-to-speech APIs by providing a unified and easy-to-use interface."
 authors = ["Giulio Bottari <giuliobottari@gmail.com>","Will Wade <willwade@gmail.com>"]
 license = "MIT"
@@ -22,7 +22,6 @@ numpy = [
 ]
 sounddevice = "^0.5.0"
 soundfile = "^0.12.1"
-
 boto3 = {version = "^1.34.137", optional = true}
 ibm-watson = {version = "^8.1.0", optional = true}
 google-cloud-texttospeech = {version = "^2.12.0", optional = true}
@@ -31,8 +30,8 @@ azure-cognitiveservices-speech = {version = "^1.15.0",  optional = true}
 winrt-runtime = { version = "^2.0.1", markers = "sys_platform == 'win32'", optional = true }
 sherpa-onnx ={ version = "^1.10.17", optional = true }
 gTTS={ version = "^2.5.2", optional = true }
-
 pymp3 = "^0.2.0"
+
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
 watson = ["ibm-watson", "websocket", "requests"]
@@ -56,6 +55,7 @@ pytest-cov = "^3.0.0"
 filetype = "^1.0.13"
 wheel = "^0.43.0"
 setuptools = "^71.1.0"
+flake8 = "^7.1.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
@@ -65,7 +65,7 @@ build-backend = "poetry.masonry.api"
 postinstall = "scripts.install_dependencies:main"
 
 [tool.poetry-dynamic-versioning]
-enable = true
+enable = false
 
 [tool.pytest.ini_options]
 markers = [
