--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ python = ">=3.10,<3.13"
 requests = { version = "^2.31.0", optional = true }
 numpy = [
     { version = "1.24.3", python = "~3.10", optional = false },
-    { version = "^2.0.1", python = ">=3.11", optional = false }
+    { version = "1.26.4", python = ">=3.11", optional = false }
 ]
 sounddevice = "^0.5.0"
 soundfile = "^0.12.1"
