--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ soundfile = "^0.12.1"
 boto3 = {version = "^1.34.137", optional = true}
 ibm-watson = {version = "^8.1.0", optional = true}
 google-cloud-texttospeech = {version = "^2.12.0", optional = true}
-py3-tts = {version = "^3.5", optional = true}
+pyttsx3 = {version = "^2.98", optional = true}
 azure-cognitiveservices-speech = {version = "^1.15.0",  optional = true}
 winrt-runtime = { version = "^2.0.1", markers = "sys_platform == 'win32'", optional = true }
 sherpa-onnx ={ version = "^1.10.17", optional = true }
