fixing missing part of pyttsx3

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ polly = ["boto3"]
 microsoft = ["azure.cognitiveservices.speech"]
 elevenlabs = ["requests","numpy"]
 witai = ["requests"]
-sapi = ["py3-tts"]
+sapi = ["pyttsx3"]
 uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","winrt_windows.foundationtime"]
 sherpaonnx = ["sherpa-onnx", "requests", "numpy"]
 googletrans = ["gTTS"]
