--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ winrt-runtime = { version = "^2.0.1", markers = "sys_platform == 'win32'", optio
 sherpa-onnx ={ version = "^1.10.17", optional = true }
 gTTS={ version = "^2.5.2", optional = true }
 pymp3 = "^0.2.0"
+pyaudio = {version = "^0.2.14", optional = true }
 
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
