--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ sapi = ["pyttsx3"]
 uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","winrt_windows.foundationtime"]
 sherpaonnx = ["sherpa-onnx", "requests", "numpy"]
 googletrans = ["gTTS"]
+controlaudio = ["pyaudio"]
 
 
 [tool.poetry.group.dev.dependencies]
