--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ filetype = "^1.0.13"
 wheel = "^0.43.0"
 setuptools = "^71.1.0"
 flake8 = "^7.1.1"
+ruff = "^0.7.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
