--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,8 @@ markers = [
 [tool.ruff]
 target-version = "py39"
 line-length = 88
+
+[tool.ruff.lint]
 ignore = ["ERA001"]
 exclude = [
     "./examples/**/*"
