--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ polly = ["boto3"]
 microsoft = ["azure.cognitiveservices.speech"]
 elevenlabs = ["requests","numpy"]
 witai = ["requests"]
-sapi = ["pyttsx3"]
+systemtts = ["pyttsx3"]
 uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","winrt_windows.foundationtime"]
 sherpaonnx = ["sherpa-onnx", "requests", "numpy"]
 googletrans = ["gTTS"]
