simplify poetry install - and add systemtts to test step

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -48,8 +48,7 @@ jobs:
 
       - name: Update package index and install dependencies
         run: |
-          poetry install --with dev 
-          poetry install -E google -E watson -E polly -E microsoft -E googletrans -E witai -E elevenlabs -E systemtts
+          poetry install --with dev --extras "google watson polly microsoft googletrans witai elevenlabs systemtts controlaudio"
           poetry run postinstall
 
       - name: Build package
@@ -119,8 +118,7 @@ jobs:
 
       - name: Update package index and install dependencies
         run: |
-          poetry install --with dev 
-          poetry install -E google -E watson -E polly -E microsoft -E googletrans -E witai -E elevenlabs -E controlaudio
+          poetry install --with dev --extras "google watson polly microsoft googletrans witai elevenlabs systemtts controlaudio"
           poetry run postinstall
 
       - name: Run tests with coverage
