--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","wi
 sherpaonnx = ["sherpa-onnx", "requests", "numpy"]
 googletrans = ["gTTS"]
 controlaudio = ["pyaudio"]
-
+espeak = []
 
 [tool.poetry.group.dev.dependencies]
 pyinstrument = "^4.7.3"
