--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,4 +1,3 @@
-
 name: Build, Test, and Publish
 
 on:
@@ -29,30 +28,23 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            ~/.cache/pypoetry
+            ~/.cache/uv
             ~/.cache/pip
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ runner.os }}-uv-${{ hashFiles('**/pyproject.toml') }}
           restore-keys: |
-            ${{ runner.os }}-poetry-
+            ${{ runner.os }}-uv-
 
-      - name: Install Poetry
-        uses: abatilo/actions-poetry@v2.0.0
-        with:
-          poetry-version: "1.8.3"
+      - name: Install `uv`
+        run: pip install uv
 
-      - name: Install poetry-dynamic-versioning plugin
-        run: poetry self add poetry-dynamic-versioning
+      - name: Install dependencies
+        run: uv sync --dev --extra google --extra watson --extra polly --extra microsoft --extra googletrans --extra witai --extra elevenlabs --extra systemtts --extra controlaudio --extra sherpaonnx
 
-      - name: Enable dynamic versioning
-        run: poetry dynamic-versioning
-
-      - name: Update package index and install dependencies
-        run: |
-          poetry install --with dev --extras "google watson polly microsoft googletrans witai elevenlabs systemtts controlaudio sherpaonnx"
-          poetry run postinstall
+      - name: Run postinstall script
+        run: uv run postinstall
 
       - name: Build package
-        run: poetry build
+        run: uv build
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
@@ -94,11 +86,11 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            ~/.cache/pypoetry
+            ~/.cache/uv
             ~/.cache/pip
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ runner.os }}-uv-${{ hashFiles('**/pyproject.toml') }}
           restore-keys: |
-            ${{ runner.os }}-poetry-
+            ${{ runner.os }}-uv-
 
       - name: Install system dependencies on Linux
         if: matrix.os == 'ubuntu-latest'
@@ -111,28 +103,23 @@ jobs:
         run: |
           brew install portaudio ffmpeg
 
-      - name: Install Poetry
-        uses: abatilo/actions-poetry@v2.0.0
-        with:
-          poetry-version: "1.8.3"
+      - name: Install `uv`
+        run: pip install uv
 
-      - name: Update package index and install dependencies
-        run: |
-          poetry install --with dev --extras "google watson polly microsoft googletrans witai elevenlabs systemtts controlaudio sherpaonnx"
-          poetry run postinstall
+      - name: Install dependencies
+        run: uv sync --dev --extra google --extra watson --extra polly --extra microsoft --extra googletrans --extra witai --extra elevenlabs --extra systemtts --extra controlaudio --extra sherpaonnx
 
       - name: Run tests with coverage
-        run: poetry run pytest --cov=tts_wrapper -m "not synthetic"
+        run: uv run pytest --cov=tts_wrapper -m "not synthetic"
 
       - name: Run all tests with Makefile
-        run: poetry run make tests
+        run: uv run make tests
 
   publish:
     runs-on: ubuntu-latest
     needs: test
     if: startsWith(github.ref, 'refs/tags/')
     steps:
-
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
