--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "pymp3>=0.2.0",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
     "pyinstrument>=4.7.3",
     "pytest>=6.2.1",
@@ -30,6 +30,8 @@ dev = [
     "mypy>=0.971",
     "pytest-cov>=3.0.0"
 ]
+
+[project.optional-dependencies]
 google = ["google-cloud-texttospeech>=2.12.0"]
 watson = ["ibm-watson>=8.1.0", "websocket-client", "requests>=2.31.0"]
 polly = ["boto3>=1.34.137"]
@@ -150,3 +152,4 @@ ignore = [
 
 [tool.ruff.lint.pylint]
 allow-magic-value-types = ["int", "str"]
+
