remove dup dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,14 +33,14 @@ dev = [
 
 [project.optional-dependencies]
 google = ["google-cloud-texttospeech>=2.12.0"]
-watson = ["ibm-watson>=8.1.0", "websocket-client", "requests>=2.31.0"]
+watson = ["ibm-watson>=8.1.0", "websocket-client"]
 polly = ["boto3>=1.34.137"]
 microsoft = ["azure-cognitiveservices-speech>=1.15.0"]
-elevenlabs = ["requests>=2.31.0", "numpy>=1.24.3"]
-witai = ["requests>=2.31.0"]
+elevenlabs = []
+witai = []
 systemtts = ["pyttsx3>=2.98"]
 uwp = ["winrt-runtime>=2.0.1; sys_platform == 'win32'"]
-sherpaonnx = ["sherpa-onnx>=1.10.17", "requests>=2.31.0", "numpy>=1.24.3"]
+sherpaonnx = ["sherpa-onnx>=1.10.17"]
 googletrans = ["gTTS>=2.5.2"]
 sapi = ["comtypes>=1.4.8; sys_platform == 'win32'"]
 controlaudio = ["pyaudio>=0.2.14"]
