Add SAPI TTS example and improve voice handling
Introduces a new example script for demonstrating the SAPI TTS engine usage on Windows. Refactors SAPIClient to improve voice metadata extraction and parsing, including robust age parsing. Updates SAPI dependencies in pyproject.toml for better compatibility.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,10 @@ sherpaonnx = [
 ]  # Pin to 1.11.x for better Windows wheel support across Python versions
 playht = []  # No additional dependencies needed as we use requests which is in core dependencies
 googletrans = ["gTTS>=2.5.2"]
-sapi = ["comtypes>=1.4.8; sys_platform == 'win32'"]
+sapi = [
+    "comtypes>=1.4.11",
+    "comtypes>=1.4.11; sys_platform == 'win32'",
+]
 controlaudio = ["pyaudio>=0.2.14"]
 espeak = []  # No additional dependencies as espeak-ng needs to be installed system-wide
 avsynth = []  # No additional dependencies as it uses built-in Swift bridge
